// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/app/Navbar.vue > { locale: "en" } snapshot test > { isLoggedIn: false } renders AppLoginButton 1`] = `
<header
  class="bg-background/75 backdrop-blur border-b border-gray-200 dark:border-gray-800 -mb-px sticky top-0 z-50"
>
  
  
  <div
    class="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl flex items-center justify-between gap-3 h-[--header-height]"
  >
    
    <div
      class="lg:flex-1 flex items-center gap-1.5"
    >
      
      <a
        aria-label="DDRadar"
        class="flex-shrink-0 font-bold text-xl text-gray-900 dark:text-white flex items-end gap-1.5"
        href="/"
      >
        
        <svg
          class="w-auto h-6"
          fill="none"
          height="640"
          viewBox="0 0 640 640"
          width="640"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M245 313L56 181l281-31c82 0 149 64 153 146v7l-31 276-122-184-214 245c0-68-55-122-123-122l245-205z"
            fill="rgb(var(--color-primary-DEFAULT))"
          />
          <path
            d="M542 280c0-100-82-182-182-182M620 280c0-144-116-260-260-260"
            fill="none"
            stroke="rgb(var(--color-primary-DEFAULT))"
            stroke-width="30"
          />
        </svg>
         DDRadar 
        
      </a>
      
    </div>
    
    <ul
      class="items-center gap-x-8 hidden lg:flex"
    >
      
      <li
        class="relative"
      >
        
        <a
          class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
          href="/users"
        >
          
          
          Find User
          
          <!--v-if-->
          
        </a>
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_0"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              Level(SP)
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_2"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              Level(DP)
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_4"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              Version
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      
    </ul>
    
    <div
      class="flex items-center justify-end lg:flex-1 gap-1.5"
    >
      
      <locale-switch-stub />
      
      <button
        aria-label="Switch to dark mode"
        class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-white hover:bg-gray-50 dark:hover:bg-gray-800 focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center"
        type="button"
      >
        
        
        <!---->
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
      </button>
      
      <login-button-stub />
      
      
      <button
        aria-label="Open Menu"
        class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-white hover:bg-gray-50 dark:hover:bg-gray-800 focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center lg:hidden"
        type="button"
      >
        
        
        <span
          aria-hidden="true"
          class="iconify i-heroicons:bars-3-20-solid flex-shrink-0 h-5 w-5"
        />
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
      </button>
      
    </div>
    
  </div>
  
  
  <!---->
</header>
`;

exports[`components/app/Navbar.vue > { locale: "en" } snapshot test > { isLoggedIn: true } renders AppUserButton 1`] = `
<header
  class="bg-background/75 backdrop-blur border-b border-gray-200 dark:border-gray-800 -mb-px sticky top-0 z-50"
>
  
  
  <div
    class="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl flex items-center justify-between gap-3 h-[--header-height]"
  >
    
    <div
      class="lg:flex-1 flex items-center gap-1.5"
    >
      
      <a
        aria-label="DDRadar"
        class="flex-shrink-0 font-bold text-xl text-gray-900 dark:text-white flex items-end gap-1.5"
        href="/"
      >
        
        <svg
          class="w-auto h-6"
          fill="none"
          height="640"
          viewBox="0 0 640 640"
          width="640"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M245 313L56 181l281-31c82 0 149 64 153 146v7l-31 276-122-184-214 245c0-68-55-122-123-122l245-205z"
            fill="rgb(var(--color-primary-DEFAULT))"
          />
          <path
            d="M542 280c0-100-82-182-182-182M620 280c0-144-116-260-260-260"
            fill="none"
            stroke="rgb(var(--color-primary-DEFAULT))"
            stroke-width="30"
          />
        </svg>
         DDRadar 
        
      </a>
      
    </div>
    
    <ul
      class="items-center gap-x-8 hidden lg:flex"
    >
      
      <li
        class="relative"
      >
        
        <a
          class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
          href="/users"
        >
          
          
          Find User
          
          <!--v-if-->
          
        </a>
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_6"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              Level(SP)
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_8"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              Level(DP)
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_10"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              Version
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      
    </ul>
    
    <div
      class="flex items-center justify-end lg:flex-1 gap-1.5"
    >
      
      <locale-switch-stub />
      
      <button
        aria-label="Switch to dark mode"
        class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-white hover:bg-gray-50 dark:hover:bg-gray-800 focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center"
        type="button"
      >
        
        
        <!---->
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
      </button>
      
      <user-button-stub />
      
      
      <button
        aria-label="Open Menu"
        class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-white hover:bg-gray-50 dark:hover:bg-gray-800 focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center lg:hidden"
        type="button"
      >
        
        
        <span
          aria-hidden="true"
          class="iconify i-heroicons:bars-3-20-solid flex-shrink-0 h-5 w-5"
        />
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
      </button>
      
    </div>
    
  </div>
  
  
  <!---->
</header>
`;

exports[`components/app/Navbar.vue > { locale: "ja" } snapshot test > { isLoggedIn: false } renders AppLoginButton 1`] = `
<header
  class="bg-background/75 backdrop-blur border-b border-gray-200 dark:border-gray-800 -mb-px sticky top-0 z-50"
>
  
  
  <div
    class="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl flex items-center justify-between gap-3 h-[--header-height]"
  >
    
    <div
      class="lg:flex-1 flex items-center gap-1.5"
    >
      
      <a
        aria-label="DDRadar"
        class="flex-shrink-0 font-bold text-xl text-gray-900 dark:text-white flex items-end gap-1.5"
        href="/"
      >
        
        <svg
          class="w-auto h-6"
          fill="none"
          height="640"
          viewBox="0 0 640 640"
          width="640"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M245 313L56 181l281-31c82 0 149 64 153 146v7l-31 276-122-184-214 245c0-68-55-122-123-122l245-205z"
            fill="rgb(var(--color-primary-DEFAULT))"
          />
          <path
            d="M542 280c0-100-82-182-182-182M620 280c0-144-116-260-260-260"
            fill="none"
            stroke="rgb(var(--color-primary-DEFAULT))"
            stroke-width="30"
          />
        </svg>
         DDRadar 
        
      </a>
      
    </div>
    
    <ul
      class="items-center gap-x-8 hidden lg:flex"
    >
      
      <li
        class="relative"
      >
        
        <a
          class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
          href="/users"
        >
          
          
          ユーザーを探す
          
          <!--v-if-->
          
        </a>
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_12"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              レベル(SP)
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_14"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              レベル(DP)
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_16"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              バージョン
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      
    </ul>
    
    <div
      class="flex items-center justify-end lg:flex-1 gap-1.5"
    >
      
      <locale-switch-stub />
      
      <button
        aria-label="Switch to dark mode"
        class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-white hover:bg-gray-50 dark:hover:bg-gray-800 focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center"
        type="button"
      >
        
        
        <!---->
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
      </button>
      
      <login-button-stub />
      
      
      <button
        aria-label="Open Menu"
        class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-white hover:bg-gray-50 dark:hover:bg-gray-800 focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center lg:hidden"
        type="button"
      >
        
        
        <span
          aria-hidden="true"
          class="iconify i-heroicons:bars-3-20-solid flex-shrink-0 h-5 w-5"
        />
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
      </button>
      
    </div>
    
  </div>
  
  
  <!---->
</header>
`;

exports[`components/app/Navbar.vue > { locale: "ja" } snapshot test > { isLoggedIn: true } renders AppUserButton 1`] = `
<header
  class="bg-background/75 backdrop-blur border-b border-gray-200 dark:border-gray-800 -mb-px sticky top-0 z-50"
>
  
  
  <div
    class="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl flex items-center justify-between gap-3 h-[--header-height]"
  >
    
    <div
      class="lg:flex-1 flex items-center gap-1.5"
    >
      
      <a
        aria-label="DDRadar"
        class="flex-shrink-0 font-bold text-xl text-gray-900 dark:text-white flex items-end gap-1.5"
        href="/"
      >
        
        <svg
          class="w-auto h-6"
          fill="none"
          height="640"
          viewBox="0 0 640 640"
          width="640"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M245 313L56 181l281-31c82 0 149 64 153 146v7l-31 276-122-184-214 245c0-68-55-122-123-122l245-205z"
            fill="rgb(var(--color-primary-DEFAULT))"
          />
          <path
            d="M542 280c0-100-82-182-182-182M620 280c0-144-116-260-260-260"
            fill="none"
            stroke="rgb(var(--color-primary-DEFAULT))"
            stroke-width="30"
          />
        </svg>
         DDRadar 
        
      </a>
      
    </div>
    
    <ul
      class="items-center gap-x-8 hidden lg:flex"
    >
      
      <li
        class="relative"
      >
        
        <a
          class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
          href="/users"
        >
          
          
          ユーザーを探す
          
          <!--v-if-->
          
        </a>
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_18"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              レベル(SP)
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_20"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              レベル(DP)
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      <li
        class="relative"
      >
        
        <!-- eslint-disable-next-line vue/no-template-shadow -->
        
        
        <div
          class="relative"
          data-headlessui-state=""
        >
          
          <div
            aria-expanded="false"
            class="inline-flex w-full"
            data-headlessui-state=""
            id="headlessui-popover-button-ndaspHGNlYV_22"
            role="button"
          >
            
            <button
              class="text-sm/6 font-semibold flex items-center gap-1 hover:text-primary"
              type="button"
            >
              
              
              バージョン
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid w-5 h-5 transform transition-transform duration-200 flex-shrink-0"
              />
              
            </button>
            
          </div>
          <!---->
          
          <!--v-if-->
          <!--v-if-->
        </div>
        
        <div
          hidden=""
          style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"
        />
        
        
      </li>
      
    </ul>
    
    <div
      class="flex items-center justify-end lg:flex-1 gap-1.5"
    >
      
      <locale-switch-stub />
      
      <button
        aria-label="Switch to dark mode"
        class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-white hover:bg-gray-50 dark:hover:bg-gray-800 focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center"
        type="button"
      >
        
        
        <!---->
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
      </button>
      
      <user-button-stub />
      
      
      <button
        aria-label="Open Menu"
        class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 p-1.5 text-gray-700 dark:text-gray-200 hover:text-gray-900 dark:hover:text-white hover:bg-gray-50 dark:hover:bg-gray-800 focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center lg:hidden"
        type="button"
      >
        
        
        <span
          aria-hidden="true"
          class="iconify i-heroicons:bars-3-20-solid flex-shrink-0 h-5 w-5"
        />
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
      </button>
      
    </div>
    
  </div>
  
  
  <!---->
</header>
`;
